<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="330dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:minHeight="220dp"
    android:gravity="center"
    android:padding="20dp"
    android:background="@drawable/rounded_corners_of_in_meeting_quit_window_outer_box"
    android:orientation="vertical">
    <TextView
        android:id="@+id/dialog_title_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/in_meeting_quit_notification"
        android:textColor="#000000"
        android:textSize="30sp" />
    <TextView
        android:id="@+id/ws_normalDialog_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/in_meeting_quit_text"
        android:textColor="#000000"
        android:textSize="@dimen/common_dialog_text_size" />
    <LinearLayout
        android:id="@+id/imq_l5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp" >
        <Button
            android:id="@+id/ws_normalDialog_confirm"
            android:layout_width="85dp"
            android:layout_height="40dp"
            android:text="@string/in_meeting_quit_quit_button"
            android:textColor="@color/button_text_color_blue"
            android:textSize="@dimen/common_dialog_text_size" />
        <Button
            android:id="@+id/ws_normalDialog_cannel"
            android:layout_width="85dp"
            android:layout_height="40dp"
            android:layout_marginLeft="60dp"
            android:text="@string/in_meeting_quit_cancel_button"
            android:textColor="@color/red"
            android:textSize="@dimen/common_dialog_text_size" />
    </LinearLayout>
</LinearLayout>